# genLogger

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  \  testFS.txt
.github/workflows/: ci.yml  code-review.yml
cmake/toolchains/cross/: stm32f429.cmake
cmake/toolchains/native/: clang.cmake  host.cmake
docs/: Doxyfile
prototypes/: CMakeLists.txt
prototypes/ADS1115/: CMakeLists.txt
prototypes/ADS1115/inc/: ads1115.hpp  ads1115_comm_interface.hpp
prototypes/ADS1115/src/: ads1115.cpp  ads1115_comm_interface.cpp  main.cpp
prototypes/nucleo-f429zi_blink/: CMakeLists.txt
prototypes/nucleo-f429zi_blink/inc/: blinkInterface.hpp
prototypes/nucleo-f429zi_blink/src/: blinkInterface.cpp  main.cpp
prototypes/nuttx_f429zi_blink/: CMakeLists.txt
prototypes/nuttx_f429zi_blink/inc/: helloWorld.h
prototypes/nuttx_f429zi_blink/src/: helloWorld.cpp  main.cpp
source/: CMakeLists.txt  README.md
source/BSP/nucleo-f429zi/: CMakeLists.txt
source/BSP/nucleo-f429zi/inc/: init.h  spi_drv.h  spi_module.h  stm32f429zi_init.hpp  stm32f4xx_hal_conf.h  uart.h
source/BSP/nucleo-f429zi/link/: STM32F429ZITX_FLASH.ld
source/BSP/nucleo-f429zi/src/: gpio_module.cpp  i2c_drv.c  init.c  spi_drv.c  spi_module.c  spi_module.cpp  stm32f429zi_init.cpp  uart.c
source/app/: README.md
source/app/configurationSubsystem/inc/: config_manager.hpp  config_mediator.hpp  internalStorage_component.hpp  terminal_component.hpp
source/app/configurationSubsystem/src/: config_manager.cpp  internalStorage_component.cpp  terminal_component.cpp
source/app/inc/: configuration_subsystem.hpp  terminal_component.hpp
source/app/loggerMetadata/: loggerMetadata.cpp  loggerMetadata.hpp
source/app/loggerSubsystem/inc/: logger_manager.hpp
source/app/loggerSubsystem/src/: externalStorage_component.hpp  logger_manager.cpp
source/app/main/inc/: device_version.hpp  errorHandler.hpp  main.h
source/app/main/src/: errorHandler.cpp  main.cpp
source/app/measurementSubsystem/inc/: processing_manager.hpp
source/app/measurementSubsystem/sensors/inc/: IHygrometer.hpp  IThermometer.hpp  anemometer.hpp  interfaceTermometer.hpp  pluviometer.hpp  sensorService.hpp
source/app/measurementSubsystem/sensors/sensorSimulator/: sensorSimulatorConsumer.cpp  sensorSimulatorConsumer.hpp  sensorSimulatorProducer.py
source/app/networkSubsystem/inc/: httpClient.hpp  httpServer.hpp  networkManager.hpp
source/app/networkSubsystem/src/: httpClient.cpp  httpServer.cpp  networkManager.cpp
source/app/processingSubsystem/inc/: processingManager.hpp  processing_manager.hpp
source/app/processingSubsystem/sensors/inc/: pluviometer.hpp
source/app/processingSubsystem/sensors/sensorSimulator/: sensorSimulatorConsumer.cpp  sensorSimulatorConsumer.hpp  sensorSimulatorProducer.py
source/app/processingSubsystem/sensors/src/: pluviometer.cpp
source/app/processingSubsystem/src/: processingManager.cpp
source/app/src/: configuration_subsystem.cpp  main.cpp  terminal_component.cpp
source/app/utilities/inc/: debug_log.hpp  utilities.hpp
source/app/utilities/src/: utilities.cpp
source/drivers/ADS1115/inc/: ADS1115.h  ADS1115_wrapper.hpp
source/drivers/ADS1115/src/: ADS1115.c  ADS1115_mock.cpp  ADS1115_wrapper.cpp
source/drivers/AHT21/inc/: aht21_wrapper.hpp  driver_aht21.h
source/drivers/AHT21/src/: aht21_mock.cpp  aht21_wrapper.cpp  driver_aht21.c
source/drivers/SDCard/: sd_spi.c  sd_spi.h
source/drivers/W25Qx/inc/: W25Qx_module.h
source/drivers/W25Qx/src/: W25Qx_module.cpp
source/drivers/inc/: W25Qx_module.h
source/drivers/rtc/inc/: host_rtc.hpp  st_rtc.hpp  stm32F429_RTC.hpp
source/drivers/rtc/src/: host_rtc.cpp  st_rtc.cpp  stm32F429_RTC.cpp
source/drivers/src/: W25Qx_module.cpp
source/microcontroller/stm32f429zi/: CMakeLists.txt
source/microcontroller/stm32f429zi/inc/: ethernet.h  gpio_module.h  i2c_drv.h  init.h  interrupts.h  leds.h  rand.h  rtc_drv.h  spi_drv.h  stm32f4xx_hal_conf.h  timer.h  uart.h
source/microcontroller/stm32f429zi/link/: STM32F429ZITX_FLASH.ld
source/microcontroller/stm32f429zi/src/: ethernet.c  gpio_module.c  gpio_module.cpp  i2c_drv.c  init.c  interrupts.c  leds.c  rand.c  rtc_drv.c  spi_drv.c  syscalls.c  timer.c  uart.c
source/middleware/FatFS/: ffconf.h  ffconf_template.h  readme.txt
source/middleware/FatFS/interface/: user_diskio.c
source/middleware/mongoose/config/: mongoose_config.h
source/platform/inc/: filesystemWrapper.hpp  filesystem_wrapper.hpp  freeRTOS.hpp  internalStorage_wrapper.hpp  littleFSInterface.h  posixThreads.hpp  rtosAdapter.hpp  rtosFactory.hpp  serialHandler.hpp
source/platform/src/: freeRTOS.cpp  internalStorage_wrapper.cpp  littleFSInterface.cpp  mongooseUtilities.c  posixThreads.cpp  rtosFactory.cpp  serialHandler.cpp
source/virtualDevices/: gpio.hpp
source/virtualDevices/inc/: rtcInterface.hpp  virtualADC.hpp  virtualCounter.hpp  virtualISR.hpp  virtualRTC.hpp  virtualTimer.hpp
source/virtualDevices/src/: virtualCounter.cpp  virtualTimer.cpp
test/: CMakeLists.txt  test.cpp  test.hpp
test/simulationFiles/: metadata.txt  station1  testFS.txt
test/simulationFiles/externalMemory/: station1
test/src/: CMakeLists.txt  exampleTests.cpp  testSuiteFS.cpp
testProjects/: CMakeLists.txt
testProjects/ADS1115/inc/: ads1115.hpp
testProjects/ADS1115/src/: ads1115.cpp
testProjects/nuttxTest/: Kconfig  Make.dep  Makefile  main.c
tools/: dockerfile  senderProcess  senderProcess.cpp
tools/directory/: format.sh
